syntax = "proto3";

package proto;
option java_package= "cn.share.event.bus.proto";
option java_multiple_files=false;
option java_outer_classname="TransferProto";

message Transfer {
  string req_id = 1;
  string req_time = 2;
  BusinessType business_type = 3;
  Request request = 4;
  Response response = 5;
}

message Request {
    RegisterRequest register_request = 1;
    SyncPullRequest sync_pull_request = 2;
    SyncPushRequest sync_push_request = 3;
}

message SyncPushRequest {
  string service_name = 1;
  string push_data = 2;
}

message SyncPullRequest {
  string service_name = 1;
}

message Response {
  uint32 code = 1;
  string message = 2;
  string data = 3;
}


message RegisterRequest {
  string service_name= 1;
  string func_name = 2;
  string version = 3;
  string desc = 4;
  // 注册信息
  repeated CommunicateInfo info = 5;
  string input_data = 6;
  FuncOutput output_data = 7;
}

message FuncOutput {
  fixed64 service_id = 1;
  fixed64 product_line_id = 2;
  fixed64 span_id = 3;
  string response_data = 4;
}

message CommunicateInfo {
  string communicate_type = 1;
  string communicate_info = 2;
}



enum BusinessType {
  // 注册请求
  REGISTER_REQUEST = 0;
  // 注册响应
  REGISTER_RESPONSE = 1;

  // 数据推送同步请求
  SYNC_PUSH_REQUEST = 2;
  // 数据推送同步响应
  SYNC_PUSH_RESPONSE = 3;

  // 数据拉取数据同步
  SYNC_PULL_REQUEST = 4;
  // 数据拉取数据同步
  SYNC_PULL_RESPONSE = 5;

  // 心跳请求
  HEART_BEAT_REQUEST = 6;
  // 心跳响应
  HEART_BEAT_RESPONSE = 7;
}